2004-01-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Re-add dirstamps to PRE/TMPINSTALL_FILES.
	Add PRE/TMPINSTALL_FILES to CLEANFILES.
	* startup/Makefile.am: Ditto.

2004-01-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Remove.
	* Makefile.am: Merge-in start/Makefile.am.
	* configure.ac: Reflect changes above.

2004-01-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate $(LIB). 
	Use noinst_DATA to trigger building libbsp.a.

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.
	* startup/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* startup/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Cosmetics.

2003-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Misc cleanups and fixes.
	* startup/Makefile.am: Misc cleanups and fixes.
	* wrapup/Makefile.am: Misc cleanups and fixes.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add preinstallation dirstamp support.
	* clock/Makefile.am: Cosmetics.
	* console/Makefile.am: Cosmetics.
	* network/Makefile.am: Cosmetics.
	* startup/Makefile.am: Cosmetics.
	* timer/Makefile.am: Cosmetics.
	* wrapup/Makefile.am: Cosmetics

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* network/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* timer/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).