@@ -22,6 +22,7 @@ project_lib_DATA = $(ARCH)/start$(LIB_VARIANT).$(OBJEXT)
 
 all-local: $(PREINSTALL_FILES) $(TMPINSTALL_FILES)
 
+PREINSTALL_DIRS =
 TMPINSTALL_FILES =
 
 $(PROJECT_INCLUDE)/coverhd.h: include/coverhd.h $(PROJECT_INCLUDE)/$(dirstamp)
@@ -33,6 +34,7 @@ $(PROJECT_LIB)/start$(LIB_VARIANT).$(OBJEXT): $(ARCH)/start$(LIB_VARIANT).$(OBJE
 TMPINSTALL_FILES += $(PROJECT_LIB)/start$(LIB_VARIANT).$(OBJEXT)
 
 CLEANFILES = $(PREINSTALL_FILES)
+DISTCLEANFILES = $(PREINSTALL_DIRS)
 CLEANFILES += $(TMPINSTALL_FILES)
 
 include $(top_srcdir)/../../../../automake/subdirs.am
