@@ -27,6 +27,7 @@ project_lib_DATA = $(ARCH)/start$(LIB_VARIANT).$(OBJEXT)
 
 all-local: $(PREINSTALL_FILES) $(TMPINSTALL_FILES)
 
+PREINSTALL_DIRS =
 TMPINSTALL_FILES =
 
 if HAS_NETWORKING
@@ -44,6 +45,7 @@ $(PROJECT_LIB)/start$(LIB_VARIANT).$(OBJEXT): $(ARCH)/start$(LIB_VARIANT).$(OBJE
 TMPINSTALL_FILES += $(PROJECT_LIB)/start$(LIB_VARIANT).$(OBJEXT)
 
 CLEANFILES = $(PREINSTALL_FILES)
+DISTCLEANFILES = $(PREINSTALL_DIRS)
 CLEANFILES += $(TMPINSTALL_FILES)
 
 include $(top_srcdir)/../../../../automake/subdirs.am
